--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongodb": "^6.18.0",
     "mysql2": "^3.14.3"
   }
 }
