--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongodb": "^6.18.0",
+    "mongoose": "^8.17.2",
     "mysql2": "^3.14.3"
   }
 }
