--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "mysql2": "^3.14.3"
